change min-height content to 600px to avoid dropdown being cut off

--- a/src/Kunstmaan/AdminBundle/Resources/public/scss/_main.scss
+++ b/src/Kunstmaan/AdminBundle/Resources/public/scss/_main.scss
@@ -119,7 +119,7 @@ footer{
     }
     > .content{
         position: relative;
-        min-height: 100%;
+        min-height: 600px;
         height: auto;
         overflow: hidden;
         margin: 0 0 40px 0;
